project/dev/ansible/kubernetes/cluster/adminer-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: dev
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
  selector:
    app: adminer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: dev
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer
        ports:
        - containerPort: 8080
          name: adminer
      restartPolicy: Always
