project/dev/ansible/kubernetes/cluster/bank-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-bank
  namespace: dev
spec:
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
  type: ClusterIP
  selector:
    app: ms-bank
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-bank
  namespace: dev
  labels:
    app: ms-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-bank
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ms-bank
    spec:
      containers:
      - name: ms-bank
        image: localhost:5001/ci-producer:0.1
        # imagePullPolicy: Never
        ports:
        - containerPort: 8083
          name: ms-bank
      restartPolicy: Always
