project/dev/ansible/kubernetes/cluster/db-aline-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-aline
  namespace: dev
spec:
  ports:
  - port: 3306
  selector:
    app: db-aline
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-aline
  namespace: dev
spec:
  selector:
    matchLabels:
      app: db-aline
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db-aline
    spec:
      containers:
      - name: db-aline
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: db-aline
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: db-aline-pv-claim
