project/dev/ansible/kubernetes/cluster/gateway-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-gateway
  namespace: dev
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: ms-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-gateway
  namespace: dev
spec:
  selector:
    matchLabels:
      app: ms-gateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ms-gateway
    spec:
      containers:
      - name: ms-gateway
        image: localhost:5001/ms-gateway:0.1
        ports:
        - containerPort: 8080
          name: ms-gateway
