project/dev/ansible/kubernetes/cluster/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: dev
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  namespace: dev
spec:
  selector:
    matchLabels:
      app: mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - image: mysql:latest
        name: mysql-db
        ports:
        - containerPort: 3306
          name: mysql-db
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
