project/dev/ansible/kubernetes/cluster/producer-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-producer
  namespace: dev
spec:
  ports:
  - port: 5050
    targetPort: 5050
    protocol: TCP
  type: ClusterIP
  selector:
    app: ci-producer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-producer
  namespace: dev
spec:
  selector:
    matchLabels:
      app: ci-producer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ci-producer
    spec:
      containers:
      - name: ci-producer
        image: localhost:5001/ci-producer:0.1
        # imagePullPolicy: Never
        ports:
        - containerPort: 5050
          name: ci-producer
