project/dev/ansible/kubernetes/cluster/transaction-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-transaction
  namespace: dev
spec:
  ports:
  - port: 8073
  selector:
    app: ms-transaction
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-transaction
  namespace: dev
  labels:
    app: ms-transaction
spec:
  selector:
    matchLabels:
      app: ms-transaction
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ms-transaction
    spec:
      containers:
      - name: ms-transaction
        image: ms-transaction:0.1
        ports:
        - containerPort: 8073
          name: ms-transaction
        resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always
