project/dev/ansible/kubernetes/cluster/underwriter-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-underwriter
  namespace: dev
spec:
  ports:
  - port: 8071
  selector:
    app: ms-underwriter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-underwriter
  namespace: dev
  labels:
    app: ms-underwriter
spec:
  selector:
    matchLabels:
      app: ms-underwriter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ms-underwriter
    spec:
      containers:
      - name: ms-underwriter
        image: ms-underwriter:0.1
        ports:
        - containerPort: 8071
          name: ms-underwriter
        resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always
