project/dev/ansible/kubernetes/cluster/user-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-user
  namespace: dev
spec:
  type: NodePort
  ports:
  - port: 8070
    nodePort: 8070
  selector:
    app: ms-user
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-user
  namespace: dev
spec:
  selector:
    matchLabels:
      app: ms-user
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ms-user
    spec:
      containers:
      - name: ms-user
        image: localhost:5001/ms-user:0.1
        ports:
        - containerPort: 8070
          name: ms-user
